[gd_scene load_steps=4 format=3 uid="uid://cvyiqf8j7yfoq"]

[ext_resource type="Script" path="res://scripts/weapon.gd" id="1_s0mfb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kgwm8"]
albedo_color = Color(0.227451, 0.227451, 0.227451, 1)

[sub_resource type="BoxMesh" id="BoxMesh_0kpc1"]
material = SubResource( "StandardMaterial3D_kgwm8" )

[node name="Weapon" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource( "1_s0mfb" )

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.111, 0, 0, 0, 0.119, 0, 0, 0, 0.483, 0, 0, 0)
mesh = SubResource( "BoxMesh_0kpc1" )

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.043, 0, 0, 0, 0.039, 0, 0, 0, 0.195, 0, 0, -0.482215)
mesh = SubResource( "BoxMesh_0kpc1" )

[node name="MuzzleExit" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0404849, 0, -0.560884)

[node name="Flash" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.711929)
visible = false
omni_range = 2.0

[node name="FlashDuration" type="Timer" parent="Flash"]
wait_time = 0.1
one_shot = true

[node name="ShotCooldown" type="Timer" parent="."]
one_shot = true

[node name="BurstCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Flash/FlashDuration" to="." method="_on_flash_duration_timeout"]
[connection signal="timeout" from="ShotCooldown" to="." method="_on_shot_cooldown_timeout"]
[connection signal="timeout" from="BurstCooldown" to="." method="_on_burst_cooldown_timeout"]
